# daisyverb

./: CMakeLists.txt
include/: ap_demo.hpp  common.hpp  cosine_oscillator.hpp  datorro_plate.hpp  fx_engine.hpp  mutable_rings.hpp
src/: main.cpp
